[package]
name = "pong"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
log = "0.4.27"
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.47.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
actix-web = "4.11.0"
dns-lookup = "2.0.4"
chrono = "0.4.41"
env_logger = "0.11.8"
humantime = "2.2.0"
strum_macros = "0.27.2"
ping = "0.6.1"
prometheus = "0.14.0"
pnet = "0.35.0"
socket2 = "0.6.0"
thiserror = "2.0.12"