[package]
name = "pong-rs"
version = "0.3.2"
edition = "2024"
authors = ["zbz"]
keywords = ["ping", "icmp", "tcp", "http"]
description = "A network monitoring tool that performs ICMP, TCP, and HTTP pings"
license = "MIT"
categories = ["network-programming", "command-line-utilities"]
repository = "https://github.com/rusthing/pong"
homepage = "https://github.com/rusthing/pong"
documentation = "https://github.com/rusthing/pong/blob/master/README.adoc"
readme = "README.adoc"

[dependencies]
log = "0.4.28"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
actix-web = "4.11.0"
thiserror = "2.0.17"
prometheus = "0.14.0"
socket2 = "0.6.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1.89"
wheel-rs = "0.2.4"
robotech = { version = "0.9.6", features = ["web"] }